# Dreema

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  READme.md  pyproject.toml  requirements.txt
dreema/: CHANGELOG  config.py  context.py  index.py  start.py  terminal.py
dreema.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
dreema/files/: __init__.py  management.py  parser.py
dreema/helpers/: __init__.py  cmd.py  configurations.py  serialization.py
dreema/logger/: __init__.py  loggers.py  setup.py
dreema/logging/: __init__.py  loggers.py
dreema/middlewares/: __init__.py  dbware.py
dreema/orm/: database.py  events.py
dreema/orm/mongo/: connection.py  queries.py  querybuilder.py
dreema/orm/mysql/: connection.py  queries.py  querybuilder.py
dreema/redis/: __init__.py  actions.py
dreema/requests/: __init__.py  request.py
dreema/responses/: __init__.py  clientresponse.py  codes.py  response.py
dreema/routing/: __init__.py  clients.py  cors.py  processing.py
dreema/scheduler/: __init__.py  jobs.py  setup.py
dreema/security/: __init__.py  authentication.py  encrypt.py
dreema/template/: endpoints.py  registers.template.py
dreema/template/controllers/: sampleController.py
dreema/template/core/: endpoints.py
dreema/template/full/: .env.template  endpoints.py  plug.template.py  settings.template.py
dreema/template/full/controllers/: usersController.py
dreema/template/full/models/: _modelsList.py  sampleModel.py  usersModel.py
dreema/template/models/: _modelsList.py  sampleModel.py
dreema/template/views/: endpoints.py
