[project]
name = "dreema"
version = "0.1.0"
description = "A high-speed, production-proven Python backend framework with built-in ORM, security, and native AI integration support."
authors = [
  { name = "Raphael Djangmah", email = "ordjangmah@gmail.com" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.11.0"
keywords = ["async", "web", "framework", "ai", "orm", "backend"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
]

dependencies = [
    "uvicorn>=0.32,<1.0",
    "aiomysql>=0.3,<1.0",
    "motor>=3.6,<4.0",
    "pymongo>=4.9,<5.0",
    "python-multipart>=0.0.22,<1.0",
    "bcrypt>=4.3,<5.0",
    "celery>=5.5,<6.0",
    "requests>=2.33,<3.0"
]

[project.scripts]
dreema = "dreema.terminal:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["dreema*"]